fixed incomplete styling

--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -27,6 +27,12 @@ a:hover{	//Sorta hack as above a:hover doesn't seem to work
 	outline: 0;
 }
 
+.btn-default {
+	color: @text-color;
+	background-color: @btn-color-bg;
+	border-color: transparent;
+}
+
 img {
 	max-width: 100%;
 }
