--- a/frappe/public/less/desk-min.less
+++ b/frappe/public/less/desk-min.less
@@ -213,6 +213,9 @@ textarea.form-control {
 
 .form-control {
 	position: relative;
+	background-color: @input-bg-dark-color;
+	color: @text-color;
+	border-color: @border-color;
 
 	input {
 		// for vertically aligned text in inputs
