--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -579,7 +579,7 @@ h6.uppercase, .h6.uppercase {
 	z-index: 1;
 
 	.comment-input-header {
-		background-color: @light-bg;
+		background-color: @timeline-comment-bg;
 		padding: 7px 15px;
 		border-bottom: 1px solid @light-border-color;
 	}
