--- a/frappe/public/less/form_grid.less
+++ b/frappe/public/less/form_grid.less
@@ -42,7 +42,7 @@
 	// padding: 10px 15px;
 
 	&.highlight {
-		background-color: @extra-light-yellow;
+		background-color: @grid-bg-highlight;
 	}
 
 	&.sortable-handle {
@@ -77,7 +77,7 @@
 
 .editable-form .grid-static-col.bold {
 	font-weight: bold;
-	background-color: @extra-light-yellow;
+	background-color: @grid-bg-highlight;
 }
 
 .validated-form .grid-static-col.error {
