--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -73,7 +73,7 @@
 .editable-title .title-text& {
 	cursor: pointer;
 	&:hover {
-		background-color: @light-yellow;
+		background-color: @title-hover;
 	}
 }
 
