--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -41,6 +41,7 @@
     max-height: 300px;
     border: 1px solid @light-border-color;
     border-radius: 4px;
+    background-color: @ql-background;
 }
 
 .ql-mention-list-container {
