--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -1,3 +1,39 @@
+/* palette colors*/
+
+@red:				        #fc4f51;
+@red-light:			        #fd8b8b;
+@red-extra-light:		    #fec3c5;
+@red-dark: 			        #a63336;
+
+@blue:		                #7679fc;
+@blue-light:			    #a3a5fc;
+@blue-extra-light:		    #d1d3fc;
+@blue-dark:			        #4c51a2;
+
+@green:				        #c6ea6c;
+@green-light:			    #d9f29e;
+@green-extra-light: 	    #ebf7cf;
+@green-dark:			    #7c9142;
+
+@yellow:			        #feef72;
+@yellow-light:			    #fff5a0;
+@yellow-extra-light:        #fef9cf;
+@yellow-dark:			    #a99e4c;
+@light-yellow:			    #fffce7;
+@extra-light-yellow:		#fffdf4;
+
+@orange:			        #fd784f;
+@orange-light:			    #fda688;
+@orange-extra-light:        #fdd2c2;
+@orange-dark:			    #a64f33;
+
+@skyblue:			        #7bd7fc;
+@skyblue-light:			    #aae3fe;
+@skyblue-extra-light:	    #d4f1ff;
+@skyblue-dark:			    #548da8;
+
+@white:                     #fff;
+
 //Erpnext
 @brand-primary:			    #5e64ff;
 @erpnext-blue:			    #7575ff;
@@ -23,6 +59,7 @@
 @navbar-default-border:     #ebeff2;
 @navbar-default-color:	    #6c7680;
 @navbar-inverse-color:	    #9d9d9d;
+@navbar-text-muted:         @text-muted;
 @navbar-search-bg:          rgba(255, 255, 255, 0.9);
 
 //Breadcrumb
@@ -57,6 +94,11 @@
 @page-container:            #fff;
 @divider-color:             #d8dfe5;
 @panel-bg:			        #f7fafc;
+@title-hover:               @light-yellow;
+@input-bg-color:            #fff;
+@input-bg-dark-color:       #fff;
+@timeline-comment-bg:       #fff;
+@ql-background:             #fff;
 
 //Form
 @print-preview:             #f5f7fa;
@@ -102,6 +144,7 @@
 @from-in-grid-footer-bg:    #fff;
 @grid-bg:                   #fff;
 @form-section-bg:           #fff;
+@grid-bg-highlight:         @extra-light-yellow;
 
 //Datatable
 @dt-filter-bg:              #fff;
@@ -227,39 +270,3 @@
 
 //Font
 @font-stack:                -apple-system, BlinkMacSystemFont,"Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell","Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-
-/* palette colors*/
-
-@red:				        #fc4f51;
-@red-light:			        #fd8b8b;
-@red-extra-light:		    #fec3c5;
-@red-dark: 			        #a63336;
-
-@blue:		                #7679fc;
-@blue-light:			    #a3a5fc;
-@blue-extra-light:		    #d1d3fc;
-@blue-dark:			        #4c51a2;
-
-@green:				        #c6ea6c;
-@green-light:			    #d9f29e;
-@green-extra-light: 	    #ebf7cf;
-@green-dark:			    #7c9142;
-
-@yellow:			        #feef72;
-@yellow-light:			    #fff5a0;
-@yellow-extra-light:        #fef9cf;
-@yellow-dark:			    #a99e4c;
-@light-yellow:			    #fffce7;
-@extra-light-yellow:		#fffdf4;
-
-@orange:			        #fd784f;
-@orange-light:			    #fda688;
-@orange-extra-light:        #fdd2c2;
-@orange-dark:			    #a64f33;
-
-@skyblue:			        #7bd7fc;
-@skyblue-light:			    #aae3fe;
-@skyblue-extra-light:	    #d4f1ff;
-@skyblue-dark:			    #548da8;
-
-@white:                     #fff;
