renamed desk_dark to desk-dark and changed to minified version

--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -742,7 +742,7 @@ select.form-control {
 .form-control.bold {
 	color: @sidebar-close;
 	font-weight: bold;
-	background-color: @extra-light-yellow;
+	background-color: @input-bg-dark-color;
 }
 
 .form-control[data-fieldtype="Password"] {
