--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -66,7 +66,7 @@
 @navbar-default-border:     @dark-primary-light;
 @navbar-default-color:	    @dark-primary-light;
 @navbar-inverse-color:	    @dark-primary-light;
-@navbar-text-muted:         #d3d3d3;
+@navbar-text-muted:         #939393;
 @navbar-search-bg:          @dark-primary-dark;
 
 //Breadcrumb
