removed desk bg color set using js and code refactor

--- a/frappe/public/less/desk-min.less
+++ b/frappe/public/less/desk-min.less
@@ -213,7 +213,7 @@ textarea.form-control {
 
 .form-control {
 	position: relative;
-	background-color: @input-bg-dark-color;
+	background-color: @input-bg-color;
 	color: @text-color;
 	border-color: @border-color;
 
