--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -740,9 +740,10 @@ select.form-control {
 }
 
 .form-control.bold {
-	color: @sidebar-close;
+	color: @text-color;
 	font-weight: bold;
-	background-color: @input-bg-dark-color;
+	background-color: @input-bg-color;
+	border-color: @border-color;
 }
 
 .form-control[data-fieldtype="Password"] {
