--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -67,7 +67,6 @@
 @navbar-default-color:	    @dark-primary-light;
 @navbar-inverse-color:	    @dark-primary-light;
 @navbar-text-muted:         #939393;
-@navbar-search-bg:          @dark-primary-dark;
 
 //Breadcrumb
 @breadcrumb-divider-color:  #c0c9d2;
@@ -78,9 +77,6 @@
 @dropdown-active-bg:        @dark-primary;
 @dropdown-border:           rgba(0, 0, 0, 0.14902);
 @dropdown-box-shadow:       rgba(0, 0, 0, .175);
-
-//Comment Container
-@comment-container-bg:      @dark-primary-light;
 
 //Modal
 @modal-backdrop-bg:		    #334143;
@@ -105,6 +101,7 @@
 @input-bg-color:            @border-color;
 @input-bg-dark-color:       @dark-primary-dark;
 @timeline-comment-bg:       @dark-primary;
+@comment-container-bg:      @dark-primary;
 @ql-background:             @border-color;
 
 //Form
