--- a/frappe/public/less/navbar.less
+++ b/frappe/public/less/navbar.less
@@ -178,7 +178,7 @@
 		border: 1px solid @border-color;
 		opacity: 0.9;
 		line-height: 1.5;
-		background-color: @input-bg-color;
+		background-color: @input-bg-dark-color;
 	}
 	button {
 		border: 1px solid @border-color;
@@ -243,7 +243,7 @@
 
 #navbar-search {
 	width: 100%;
-	background-color: @navbar-search-bg;
+	background-color: @input-bg-dark-color;
 	color: @text-color;
 	border-color: @border-color;
 }
