--- a/frappe/public/less/form_grid.less
+++ b/frappe/public/less/form_grid.less
@@ -66,6 +66,7 @@
 .grid-empty, .list-loading {
 	padding: 10px 15px;
 	color: @border-color;
+	background-color: @grid-empty-bg;
 }
 
 .grid-static-col, .row-index {
