--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -235,10 +235,13 @@ select.input-sm {
 
 	.form-control {
 		font-weight: 500;
+		background-color: @input-bg-color;
+		color: @text-color;
 	}
 
 	.form-control.bold {
-		background-color: @setup-wizard-button-disbaled;
+		background-color: @input-bg-color;
+		color: @text-color;
 	}
 
 	.add-more {
