--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -140,8 +140,14 @@
 @from-in-grid-bg:           #fff;
 @from-in-grid-footer-bg:    #fff;
 @grid-bg:                   #fff;
+@grid-empty-bg:             #fff;
 @form-section-bg:           #fff;
 @grid-bg-highlight:         @extra-light-yellow;
+
+//Datepicker
+@datepicker-bg:             #fff;
+@datepicker-button-bg:      #f0f0f0;
+@datepicker-hover:          #f0f0f0;
 
 //Datatable
 @dt-filter-bg:              #fff;
