--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -147,8 +147,14 @@
 @from-in-grid-bg:           #fff;
 @from-in-grid-footer-bg:    #fff;
 @grid-bg:                   @dark-primary;
+@grid-empty-bg:             @dark-primary-dark;
 @form-section-bg:           @dark-primary-dark;
 @grid-bg-highlight:         @dark-primary;
+
+//Datepicker
+@datepicker-bg:             @dark-primary;
+@datepicker-button-bg:      @dark-primary-light;
+@datepicker-hover:          @dark-border;            
 
 //Datatable
 @dt-filter-bg:              #fff;
