--- a/frappe/templates/pages/integrations/payment-success.html
+++ b/frappe/templates/pages/integrations/payment-success.html
@@ -9,9 +9,14 @@
 			{{ _("Success") }}</span>
 	</div>
 	<p>{{ payment_message or _("Your payment was successfully accepted") }}</p>
-	{% if not payment_message%}
-		<div><a href='{{ frappe.form_dict.redirect_to or "/" }}' class='btn btn-primary btn-sm'>
-			{{ _("Continue") }}</a></div>
+	{% if not payment_message %}
+		<div>
+			<a 
+			   href='{{ frappe.form_dict.redirect_to or "/" }}'
+			   class='btn btn-primary btn-sm'>
+				{{ _("Continue") }}
+			</a>
+		</div>
 	{% endif %}
 </div>
 <style>
