enhance(kanban): Add expected due date explicitly on card

--- a/frappe/public/js/frappe/views/kanban/kanban_card.html
+++ b/frappe/public/js/frappe/views/kanban/kanban_card.html
@@ -3,7 +3,10 @@
 		<div class="kanban-card-title">
 			<!-- Hack to retrieve task document number,
 				since TASK00001 looks bad on the card -->
-			<div class="text-muted">#{{ flt(name.split("TASK")[1]) }}</div>
+			<div class="text-muted">
+				<span>#{{ flt(name.split("TASK")[1]) }}</span>
+				<span class="pull-right">{{ doc.exp_end_date }}</span>
+			</div>
 			{{ title }}
 		</div>
 		<div class="kanban-card-meta">
