--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -678,7 +678,7 @@ h6.uppercase, .h6.uppercase {
 	border-radius: 3px;
 	min-height: 30px;
 	font-weight: bold;
-	background-color: @disabled-input;
+	background-color: @input-bg-disabled-color;
 	padding: 5px 10px;
 	border-radius: 3px;
 }
