--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -92,6 +92,7 @@
 @panel-bg:			        #f7fafc;
 @title-hover:               @light-yellow;
 @input-bg-color:            #fff;
+@input-bg-disabled-color:   #f5f7fa;
 @input-bg-dark-color:       #fff;
 @timeline-comment-bg:       #fff;
 @comment-container-bg:      #fff;
@@ -146,6 +147,9 @@
 
 //Datepicker
 @datepicker-bg:             #fff;
+@datepicker-button-bg:      #f0f0f0;
+@datepicker-hover:          #f0f0f0;
+@datepicker-muted:          #939393;
 @datepicker-button-bg:      #f0f0f0;
 @datepicker-hover:          #f0f0f0;
 
