--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -99,6 +99,7 @@
 @divider-color:             @border-color;
 @title-hover:               @border-color;
 @input-bg-color:            @border-color;
+@input-bg-disabled-color:   #888888;
 @input-bg-dark-color:       @dark-primary-dark;
 @timeline-comment-bg:       @dark-primary;
 @comment-container-bg:      @dark-primary;
@@ -154,6 +155,9 @@
 //Datepicker
 @datepicker-bg:             @dark-primary;
 @datepicker-button-bg:      @dark-primary-light;
+@datepicker-hover:          @dark-border;
+@datepicker-muted:          @navbar-text-muted;
+@datepicker-button-bg:      @dark-border;
 @datepicker-hover:          @dark-border;            
 
 //Datatable
