--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -144,14 +144,12 @@
 @grid-empty-bg:             #fff;
 @form-section-bg:           #fff;
 @grid-bg-highlight:         @extra-light-yellow;
+@dashboard-bg:              #fafbfc;
 
 //Datepicker
 @datepicker-bg:             #fff;
-@datepicker-button-bg:      #f0f0f0;
 @datepicker-hover:          #f0f0f0;
 @datepicker-muted:          #939393;
-@datepicker-button-bg:      #f0f0f0;
-@datepicker-hover:          #f0f0f0;
 
 //Datatable
 @dt-filter-bg:              #fff;
