--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -101,8 +101,8 @@
 @input-bg-color:            @border-color;
 @input-bg-disabled-color:   #888888;
 @input-bg-dark-color:       @dark-primary-dark;
-@timeline-comment-bg:       @dark-primary;
-@comment-container-bg:      @dark-primary;
+@timeline-comment-bg:       @dark-primary-dark;
+@comment-container-bg:      @dark-primary-dark;
 @ql-background:             @border-color;
 
 //Form
@@ -145,20 +145,18 @@
 
 //Form Grid
 @grid-body-bg:              #fff;
-@from-in-grid-bg:           #fff;
+@from-in-grid-bg:           @dark-primary-dark;
 @from-in-grid-footer-bg:    #fff;
 @grid-bg:                   @dark-primary;
 @grid-empty-bg:             @dark-primary-dark;
 @form-section-bg:           @dark-primary-dark;
 @grid-bg-highlight:         @dark-primary;
+@dashboard-bg:              @dark-primary;
 
 //Datepicker
 @datepicker-bg:             @dark-primary;
-@datepicker-button-bg:      @dark-primary-light;
-@datepicker-hover:          @dark-border;
-@datepicker-muted:          @navbar-text-muted;
-@datepicker-button-bg:      @dark-border;
-@datepicker-hover:          @dark-border;            
+@datepicker-hover:          @border-color;
+@datepicker-muted:          @text-muted;
 
 //Datatable
 @dt-filter-bg:              #fff;
