--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -249,6 +249,9 @@
 @awesomplete-ul-bg:         #fff;
 @awesomplete-ul-bg-selected:#f0f4f7;
 
+//Quill
+@ql-stroke:                 @text-color;
+
 //Indicators
 @indicator-blue:		    #5e64ff;
 @indicator-red:			    #ff5858;
