--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -99,7 +99,7 @@
 @divider-color:             @border-color;
 @title-hover:               @border-color;
 @input-bg-color:            @border-color;
-@input-bg-disabled-color:   #888888;
+@input-bg-disabled-color:   #757575;
 @input-bg-dark-color:       @dark-primary-dark;
 @timeline-comment-bg:       @dark-primary-dark;
 @comment-container-bg:      @dark-primary-dark;
@@ -255,6 +255,9 @@
 //Awesomplete
 @awesomplete-ul-bg:         @dark-primary-dark;
 @awesomplete-ul-bg-selected:@dark-primary-light;
+
+//Quill
+@ql-stroke:                 @text-color;
 
 //Indicators
 @indicator-blue:		    #5e64ff;
