fixed styling issues

--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -359,3 +359,19 @@ a.no-decoration& {
 hr {
     border-top: 1px solid @border-color;
 }
+.ace_scroller{
+	background-color: @ace-scroller-bg !important;
+	color: @text-color !important;
+}
+.ace_marker-layer .ace_active-line{
+	background-color: @ace-scroller-active-bg !important;
+	color: @text-color !important;
+}
+.ace_gutter{
+	background-color: @ace-gutter-bg !important;
+	color: @text-color !important;
+}
+.ace-tomorrow .ace_gutter-active-line{
+	background-color: @ace-gutter-active-bg !important;
+	color: @text-color !important;
+}
