--- a/frappe/public/less/frappe-datatable.less
+++ b/frappe/public/less/frappe-datatable.less
@@ -64,6 +64,12 @@ table td.dt-cell {
 	animation: 500ms breathe forwards;
 }
 
+.dt-cell__content {
+	background-color: @datatable-bg-color;
+	border-color: @datatable-border-color;
+	color: @text-color;
+}
+
 .report-action-checkbox {
 	margin: 0;
 	margin-left: 10px;
