--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -104,6 +104,10 @@
 @disabled-input:            #f5f7fa;
 @goal-container-bg:         #fff;
 @badge-import:              #e74c3c;
+@ace-scroller-bg:           #fff;
+@ace-gutter-bg:             #f6f6f6;
+@ace-gutter-active-bg:      #dcdcdc;
+@ace-scroller-active-bg:    #dcdcdc;
 
 //Social
 @generic-card-bg:           #fff;
