--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -106,11 +106,15 @@
 @ql-background:             @border-color;
 
 //Form
-@print-preview:             #f5f7fa;
+@print-preview:             @dark-primary-dark;
 @sidebar-close:             #000;
 @disabled-input:            #f5f7fa;
 @goal-container-bg:         #fff;
 @badge-import:              #e74c3c;
+@ace-scroller-bg:           @dark-border;
+@ace-gutter-bg:             @dark-primary;
+@ace-gutter-active-bg:      @dark-primary-dark;
+@ace-scroller-active-bg:    @dark-primary-dark;
 
 //Social
 @generic-card-bg:           #fff;
