fixed disabled input bad styling

--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -27,6 +27,7 @@
 .frappe-control .control-value {
 	overflow-wrap: break-word;
 	background-color: @input-bg-disabled-color;
+	border: 0.5px solid @input-border-disabled-color;
 }
 
 .link-btn {
