--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -93,6 +93,7 @@
 @title-hover:               @light-yellow;
 @input-bg-color:            #fff;
 @input-bg-disabled-color:   #f5f7fa;
+@input-border-disabled-color:   #f5f7fa;
 @input-bg-dark-color:       #fff;
 @timeline-comment-bg:       #fff;
 @comment-container-bg:      #fff;
