--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -99,7 +99,8 @@
 @divider-color:             @border-color;
 @title-hover:               @border-color;
 @input-bg-color:            @border-color;
-@input-bg-disabled-color:   #757575;
+@input-bg-disabled-color:   @dark-primary-dark;
+@input-border-disabled-color:   @dark-border;
 @input-bg-dark-color:       @dark-primary-dark;
 @timeline-comment-bg:       @dark-primary-dark;
 @comment-container-bg:      @dark-primary-dark;
