fixed routing while switching colors

--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -40,6 +40,7 @@
 @dark-primary-light :                   #424242;
 @dark-border :                          #4f4f4f;
 @dark-text :                            white;
+@dark-input :                           #2f2f2f;
 
 //Erpnext
 @brand-primary:			                #5e64ff;
@@ -98,13 +99,13 @@
 @panel-bg:			                    @dark-primary-light;
 @divider-color:                         @border-color;
 @title-hover:                           @border-color;
-@input-bg-color:                        @border-color;
+@input-bg-color:                        @dark-input;
 @input-bg-disabled-color:               @dark-primary-dark;
-@input-border-disabled-color            :   @dark-border;
+@input-border-disabled-color:           @dark-border;
 @input-bg-dark-color:                   @dark-primary-dark;
 @timeline-comment-bg:                   @dark-primary-dark;
 @comment-container-bg:                  @dark-primary-dark;
-@ql-background:                         @border-color;
+@ql-background:                         @dark-input;
 
 //Form          
 @print-preview:                         @dark-primary-dark;
