added missing styling

--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -375,3 +375,9 @@ hr {
 	background-color: @ace-gutter-active-bg !important;
 	color: @text-color !important;
 }
+.table > tbody > tr > td.danger {
+	background-color: @danger-bg-color;
+}
+.table-bordered > tbody > tr > td {
+	border-color: @border-color;
+}
