--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -98,6 +98,7 @@
 @timeline-comment-bg:                   #fff;
 @comment-container-bg:                  #fff;
 @ql-background:                         #fff;
+@danger-bg-color:                       #f2dede;
 
 //Form          
 @print-preview:                         #f5f7fa;
