--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -106,6 +106,7 @@
 @timeline-comment-bg:                   @dark-primary-dark;
 @comment-container-bg:                  @dark-primary-dark;
 @ql-background:                         @dark-input;
+@danger-bg-color:                       @dark-primary-dark;
 
 //Form          
 @print-preview:                         @dark-primary-dark;
