Make liked_by popover scrollable

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -457,12 +457,14 @@ li.user-progress {
 
 // like pop-over
 .liked-by-popover {
+	.popover-content {
+		padding: 0px;
+		overflow: scroll;
+		max-height: 150px;
+	}
 	min-width: 100px;
-	margin-top: -10px;
-	margin-bottom: -10px;
-
 	li {
-		margin: 15px 0px;
+		margin: 10px;
 	}
 }
 
