fix(ui): make footer appear at end of page

--- a/frappe/templates/base.html
+++ b/frappe/templates/base.html
@@ -37,7 +37,7 @@
 {% block body %}
 <body data-path="{{ path }}">
 	<div class="main-section">
-		<div>
+		<div class="wrapper">
 			<header>
 			{%- block banner -%}
 				{% include "templates/includes/banner_extension.html" ignore missing %}
