--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -3,9 +3,24 @@
 @import "avatar.less";
 @import "indicator.less";
 
+html, body {
+	height: 100%;
+	margin: 0; padding: 0;  /* to avoid scrollbars */
+}
+
 body {
 	font-family: @font-stack;
 	color: @text-color;
+}
+
+.main-section {
+	display: flex;
+	min-height: 100%;
+	flex-direction: column; 
+}
+
+.wrapper {
+	flex: 1;
 }
 
 a& {
