--- a/frappe/public/less/calendar.less
+++ b/frappe/public/less/calendar.less
@@ -130,7 +130,7 @@ th.fc-day-header {
 //changed during master-calendar
 
 th.fc-future > span, th.fc-past > span , th.fc-today > span{
-	text-align: center;
+	text-align: left;
 	width: min-intrinsic;
 	width: -webkit-min-content;
 	width: -moz-min-content;
@@ -147,4 +147,13 @@ td.fc-axis.fc-widget-content > span{
 	text-transform: capitalize;
 	font-weight: 500 !important
 
+}
+button.fc-next-button.fc-button.btn.btn-default {
+    margin-right: 2em;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.btn-group > .btn:last-child:not(:first-child), .btn-group > .dropdown-toggle:not(:first-child) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
