--- a/frappe/public/less/chat.less
+++ b/frappe/public/less/chat.less
@@ -3,7 +3,7 @@
 // http://codeguide.co - @mdo (Author of Bootstrap)
 
 @import "flex.less";
-@import {reference} "common.less";
+@import (reference) "common.less";
 
 // Typography
 @font-weight-bold:								700;
