--- a/frappe/public/less/chat.less
+++ b/frappe/public/less/chat.less
@@ -2,8 +2,8 @@
 
 // http://codeguide.co - @mdo (Author of Bootstrap)
 
+@import "common.less";	
 @import "flex.less";
-@import {reference} "common.less";
 
 // Typography
 @font-weight-bold:								700;
