--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -54,3 +54,33 @@
 .markdown-toggle, .html-toggle {
 	margin-bottom: 5px;
 }
+
+/* table multiselect */
+.table-multiselect {
+	display: flex !important;
+	align-items: center;
+	flex-wrap: wrap;
+	height: auto;
+	padding: 10px;
+	padding-bottom: 5px;
+}
+
+.table-multiselect.form-control input {
+	outline: none;
+	border: none;
+	padding: 0;
+	font-size: @text-medium;
+	height: 30px;
+}
+
+.tb-selected-value {
+	display: inline-block;
+    background: @light-bg;
+    padding: 3px 6px;
+    color: @text-muted;
+    font-size: @text-medium;
+    border: 1px solid @border-color;
+    border-radius: 5px;
+	margin-right: 5px;
+	margin-bottom: 5px;
+}
