fix: Read only mode and click to navigate to form

--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -57,7 +57,7 @@
 
 /* table multiselect */
 .table-multiselect {
-	display: flex !important;
+	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
 	height: auto;
