--- a/frappe/public/less/desk-min.less
+++ b/frappe/public/less/desk-min.less
@@ -765,6 +765,7 @@ li.user-progress {
 }
 
 .checkbox label {
+	color: @text-color;
 	padding-left: 0px;
 }
 
@@ -773,6 +774,7 @@ li.user-progress {
 	margin-left: 0px;
 	position: relative;
 	height: 12px;
+	color: @text-color;
 }
 
 // custom font awesome checkbox
