--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -54,7 +54,7 @@
 @text-extra-muted:		                #d1d8dd;
 @light-border-color:		            @dark-border;
 @text-color:			                @dark-text;
-@text-light:			                #6c7680;
+@text-light:			                @text-color;
 @text-muted:			                #8d99a6;
 @grey-link-color:		                #212a33;
 @text-dark:                             #2e3338;
@@ -134,7 +134,7 @@
 @body-color:                            #454e57;
 @code-color:                            #e66a12;
 @code-bg-color:                         @dark-primary-dark;
-@pre-bg-color:                          #fafbfc;
+@pre-bg-color:                          @dark-input;
 @pre-border-color:                      #e1e9f0;
 @hljs-color:                            #454e57;
 @navbar-link-color:                     #fff;
