--- a/frappe/public/less/docs.less
+++ b/frappe/public/less/docs.less
@@ -111,6 +111,7 @@ pre {
   background:@pre-bg-color;
   border: 1px solid @pre-border-color;
   border-radius:2px;
+  color: @text-color;
 }
 
 .hljs {
