--- a/frappe/public/less/calendar.less
+++ b/frappe/public/less/calendar.less
@@ -127,33 +127,18 @@ th.fc-day-header {
 .fc-bg-yellow {
 	.fc-bg-color(yellow);
 }
-//changed during master-calendar
-
-th.fc-future > span, th.fc-past > span , th.fc-today > span{
-	text-align: left;
-	width: min-intrinsic;
-	width: -webkit-min-content;
-	width: -moz-min-content;
-	width: min-content;
-	display: table-caption;
-	-ms-grid-columns: min-content;
+.popover.fade.bottom.in {
+	min-width: 100px;
+	padding: 15px;
+	z-index: 2;
 
 }
-th.fc-future > span::first-line, th.fc-past > span::first-line , th.fc-today > span::first-line{
-	font-size: 140%; 
+.popover-content{
+	padding: "0 0 0 0"
 }
-td.fc-axis.fc-widget-content > span{
-
-	text-transform: capitalize;
-	font-weight: 500 !important
-
+.popover-content > div > h4{
+	margin-top: 0
 }
-button.fc-next-button.fc-button.btn.btn-default {
-    margin-right: 2em;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-.btn-group > .btn:last-child:not(:first-child), .btn-group > .dropdown-toggle:not(:first-child) {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+.popover-content > div > h6{
+	margin-top: -10px
 }
