--- a/frappe/public/scss/bootstrap-4.scss
+++ b/frappe/public/scss/bootstrap-4.scss
@@ -1,5 +1,4 @@
 @import "variables";
-@import "~bootstrap/scss/bootstrap";
 @import "multilevel-dropdown";
 
 
@@ -93,3 +92,18 @@ img {
 .text-underline {
 	text-decoration: underline;
 }
+
+// .standard-image {
+// 	width: 100%;
+// 	height: 0;
+// 	padding: 50% 0;
+// 	display: inline-block;
+// 	text-align: center;
+// 	border-radius: 4px;
+// 	font-size: 14px;
+// 	line-height: 0px;
+// 	color: #d1d8dd;
+// 	border: 1px solid #d1d8dd;
+// 	font-weight: normal;
+// 	margin-top: -1px;
+// }
