fix: compress UI database backup-file

--- a/frappe/public/less/calendar.less
+++ b/frappe/public/less/calendar.less
@@ -127,6 +127,9 @@ th.fc-day-header {
 .fc-bg-yellow {
 	.fc-bg-color(yellow);
 }
+
+//Added during Master Calendar
+
 .popover.fade.bottom.in {
 	min-width: 100px;
 	padding: 15px;
