--- a/frappe/templates/web.html
+++ b/frappe/templates/web.html
@@ -11,7 +11,7 @@
 		{% endblock %}
 	</div>
 
-	<main class="container">
+	<main class="container my-5">
 		<div class="d-flex justify-content-between align-items-center">
 			<div class="page-header">
 				{% block header %}{% endblock %}
