--- a/frappe/public/scss/website.scss
+++ b/frappe/public/scss/website.scss
@@ -44,7 +44,10 @@ body {
 }
 
 .breadcrumb {
-	font-size: 0.75rem;
+    font-size: 0.75rem;
+    padding-left: 0;
+    padding-right: 0;
+    background-color: white;
 }
 
 a.card {
@@ -59,38 +62,22 @@ img {
 	@extend .d-none;
 }
 
-.video-background {
-	width: 100vw;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-
-	&-overlay {
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		width: 100%;
-		height: 100%;
-		background-color: var(--dark);
-		opacity: 0.4;
-	}
-}
-
-.hero-section {
-	background-image: url("/assets/rigpl_theme/images/hero-image.jpg");
-	background-size: cover;
-	background-position-y: 15%;
-	background-position-y: 27%;
-}
-
 .btn-primary {
 	color: $white;
 }
 
 .text-underline {
 	text-decoration: underline;
+}
+
+.web-footer {
+	padding: 5rem 0;
+	min-height: 140px;
+	border-top: 1px solid $border-color;
+}
+
+.no-underline {
+    text-decoration: none !important;
 }
 
 // .standard-image {
