--- a/frappe/templates/includes/comments/comments.html
+++ b/frappe/templates/includes/comments/comments.html
@@ -1,6 +1,6 @@
-<div class="comment-view">
+<div class="comment-view mb-4">
 	{% if comment_text %}
-	<div class="comment-header">{{ comment_text }}</div>
+	<div class="comment-header mb-4">{{ comment_text }}</div>
 	{% endif %}
 	{% if not comment_list %}
 	<div class="no-comment">
@@ -9,8 +9,10 @@
 	{% endif %}
 
 	<div itemscope itemtype="http://schema.org/UserComments" id="comment-list">
-		{% for comment in comment_list %}
-		{% include "templates/includes/comments/comment.html" %}
+        {% for comment in comment_list %}
+        <div class="my-3">
+            {% include "templates/includes/comments/comment.html" %}
+        </div>
 		{% endfor %}
 	</div>
 </div>
@@ -22,13 +24,13 @@
 	</div>
 
 	<div class="comment-form-wrapper">
-		<a class="add-comment btn btn-default btn-xs">{{ _("Add Comment") }}</a>
+		<a class="add-comment btn btn-light btn-xs">{{ _("Add Comment") }}</a>
 			<div style="display: none;" id="comment-form">
 			<p>{{ _("Leave a Comment") }}</p>
 			<div class="alert" style="display:none;"></div>
 			<form>
 				<fieldset>
-					<div class="row {% if _login_required %}hide{% endif %}"
+					<div class="row {% if _login_required %} hidden {% endif %}"
 						style="margin-bottom: 15px;">
 						<div class="col-sm-6">
 							<input class="form-control" name="comment_by_fullname"
@@ -93,12 +95,12 @@
 			}
 
 			if(!args.comment_by_fullname || !args.comment_by || !args.comment) {
-				frappe.msgprint("{{ _("All fields are necessary to submit the comment.") }}");
+				frappe.msgprint(__("All fields are necessary to submit the comment."));
 				return false;
 			}
 
 			if (args.comment_by!=='Administrator' && !validate_email(args.comment_by)) {
-				frappe.msgprint("{{ _("Please enter a valid email address.") }}");
+				frappe.msgprint(__("Please enter a valid email address."));
 				return false;
 			}
 
@@ -116,7 +118,7 @@
 						$(".no-comment, .add-comment").toggle(false);
 						$("#comment-form").toggle();
 					}
-					$(".add-comment").text('{{ _("Add Another Comment") }}');
+					$(".add-comment").text(__("Add Another Comment"));
 					$(".add-comment").toggle();
 				}
 			})
