fix: Indicator font size

--- a/frappe/public/less/indicator.less
+++ b/frappe/public/less/indicator.less
@@ -4,6 +4,7 @@
 .indicator-right {
     background:none;
     vertical-align:middle;
+    font-size: 12px;
     font-weight:bold;
     color:#6c7680;
 }
