--- a/frappe/public/scss/website.scss
+++ b/frappe/public/scss/website.scss
@@ -80,6 +80,10 @@ img {
     text-decoration: none !important;
 }
 
+.indicator {
+    font-size: inherit;
+}
+
 // .standard-image {
 // 	width: 100%;
 // 	height: 0;
