--- a/frappe/public/js/frappe/form/templates/form_sidebar.html
+++ b/frappe/public/js/frappe/form/templates/form_sidebar.html
@@ -75,6 +75,12 @@
 			<span class="likes-count"></span>
 		</span>
 	</li>
+	<li class="divider"></li>
+	<li class="document-follow">
+		<a class="strong badge-hover anchor-document-follow">
+			<span></span>
+		</a>
+	</li>
 	<li class="modified-by"></li>
 	<li class="created-by"></li>
 </ul>
