--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -939,3 +939,7 @@ body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
 		}
 	}
 }
+
+.document-follow{
+	margin-top: 30px;
+}
