--- a/frappe/public/js/frappe/form/templates/form_sidebar.html
+++ b/frappe/public/js/frappe/form/templates/form_sidebar.html
@@ -81,7 +81,8 @@
 			<span></span>
 		</a>
 	</li>
-	<li class="modified-by"></li>
+	<li class="h6 followed-by-label">{%= __("Followed by") %}</li>
+	<li class="form-followed"></li>
 	<li class="created-by"></li>
 </ul>
 {% if(frappe.get_form_sidebar_extension) { %}
